--- a/index.html
+++ b/index.html
@@ -17,97 +17,124 @@
       </div>
       <div v-if="loading">
         <div v-if="haveSearchedBook">
-          <footer id="loadingscreen">
+          <h2 id="loadingscreen">
             Loading...
-          </footer>
+          </h2>
         </div>
       </div>
       <div v-else>
-        <p id="bookid" >The book you have wanted to find is: {{ message }}.</p>
-        <ul>
-          <li class="bookInfo" v-bind:src="bookInfo">Book title is {{bookInfo.title}}</li>
-          <li class="bookInfo" v-bind:src="bookInfo">Book author is {{bookInfo.author}}</li>
-          <li class="bookInfo" v-bind:src="bookInfo">Book publish date is {{bookInfo.publishDate}}</li>
-          <!--<li v-bind:src="bookInfo">Book image is {{bookInfo.coverImg}}</li>-->
-        </ul>
-        <button id="addToFavoriteButton" v-on:click="addToFavorites1">Add to favorites</button>
-        <br>
-        <ul>
-          <li class="bookInfo" v-bind:src="bookInfo">Book title is {{bookInfo_2.title}}</li>
-          <li class="bookInfo" v-bind:src="bookInfo">Book author is {{bookInfo_2.author}}</li>
-          <li class="bookInfo" v-bind:src="bookInfo">Book publish date is {{bookInfo_2.publishDate}}</li>
-          <!--<li v-bind:src="bookInfo">Book image is {{bookInfo.coverImg}}</li>-->
-        </ul>
-        <button id="addToFavoriteButton" v-on:click="addToFavorites2">Add to favorites</button>
-        <br>
-        <ul>
-          <li class="bookInfo" v-bind:src="bookInfo">Book title is {{bookInfo_3.title}}</li>
-          <li class="bookInfo" v-bind:src="bookInfo">Book author is {{bookInfo_3.author}}</li>
-          <li class="bookInfo" v-bind:src="bookInfo">Book publish date is {{bookInfo_3.publishDate}}</li>
-          <!--<li v-bind:src="bookInfo">Book image is {{bookInfo.coverImg}}</li>-->
-        </ul>
-        <button id="addToFavoriteButton" v-on:click="addToFavorites3">Add to favorites</button>
-        <br>
-        <ul>
-          <li class="bookInfo" v-bind:src="bookInfo">Book title is {{bookInfo_4.title}}</li>
-          <li class="bookInfo" v-bind:src="bookInfo">Book author is {{bookInfo_4.author}}</li>
-          <li class="bookInfo" v-bind:src="bookInfo">Book publish date is {{bookInfo_4.publishDate}}</li>
-          <!--<li v-bind:src="bookInfo">Book image is {{bookInfo.coverImg}}</li>-->
-        </ul>
-        <button id="addToFavoriteButton" v-on:click="addToFavorites4">Add to favorites</button>
-        <br>
-        <ul>
-          <li class="bookInfo" v-bind:src="bookInfo">Book title is {{bookInfo_5.title}}</li>
-          <li class="bookInfo" v-bind:src="bookInfo">Book author is {{bookInfo_5.author}}</li>
-          <li class="bookInfo" v-bind:src="bookInfo">Book publish date is {{bookInfo_5.publishDate}}</li>
-          <!--<li v-bind:src="bookInfo">Book image is {{bookInfo.coverImg}}</li>-->
-        </ul>
-        <button id="addToFavoriteButton" v-on:click="addToFavorites5">Add to favorites</button>
-        <br>
-        <ul>
-          <li class="bookInfo" v-bind:src="bookInfo">Book title is {{bookInfo_6.title}}</li>
-          <li class="bookInfo" v-bind:src="bookInfo">Book author is {{bookInfo_6.author}}</li>
-          <li class="bookInfo" v-bind:src="bookInfo">Book publish date is {{bookInfo_6.publishDate}}</li>
-          <!--<li v-bind:src="bookInfo">Book image is {{bookInfo.coverImg}}</li>-->
-        </ul>
-        <button id="addToFavoriteButton" v-on:click="addToFavorites6">Add to favorites</button>
-        <br>
-        <ul>
-          <li class="bookInfo" v-bind:src="bookInfo">Book title is {{bookInfo_7.title}}</li>
-          <li class="bookInfo" v-bind:src="bookInfo">Book author is {{bookInfo_7.author}}</li>
-          <li class="bookInfo" v-bind:src="bookInfo">Book publish date is {{bookInfo_7.publishDate}}</li>
-          <!--<li v-bind:src="bookInfo">Book image is {{bookInfo.coverImg}}</li>-->
-        </ul>
-        <button id="addToFavoriteButton" v-on:click="addToFavorites7">Add to favorites</button>
-        <br>
-        <ul>
-          <li class="bookInfo" v-bind:src="bookInfo">Book title is {{bookInfo_8.title}}</li>
-          <li class="bookInfo" v-bind:src="bookInfo">Book author is {{bookInfo_8.author}}</li>
-          <li class="bookInfo" v-bind:src="bookInfo">Book publish date is {{bookInfo_8.publishDate}}</li>
-          <!--<li v-bind:src="bookInfo">Book image is {{bookInfo.coverImg}}</li>-->
-        </ul>
-        <button id="addToFavoriteButton" v-on:click="addToFavorites8">Add to favorites</button>
-        <br>
-        <ul>
-          <li class="bookInfo" v-bind:src="bookInfo">Book title is {{bookInfo_9.title}}</li>
-          <li class="bookInfo" v-bind:src="bookInfo">Book author is {{bookInfo_9.author}}</li>
-          <li class="bookInfo" v-bind:src="bookInfo">Book publish date is {{bookInfo_9.publishDate}}</li>
-          <!--<li v-bind:src="bookInfo">Book image is {{bookInfo.coverImg}}</li>-->
-        </ul>
-        <button id="addToFavoriteButton" v-on:click="addToFavorites9">Add to favorites</button>
-        <br>
-        <br>
+        <p id="bookid" >Below are the search results pertaining to: {{ message }}.</p>
+        <ol>
+          <li>
+            <ul>
+              <li class="bookInfo" v-bind:src="bookInfo">Book title is {{bookInfo.title}}</li>
+              <li class="bookInfo" v-bind:src="bookInfo">Book author is {{bookInfo.author}}</li>
+              <li class="bookInfo" v-bind:src="bookInfo">Book publish date is {{bookInfo.publishDate}}</li>
+              <!--<li v-bind:src="bookInfo">Book image is {{bookInfo.coverImg}}</li>-->
+            </ul>
+          </li>
+          <button id="addToFavoriteButton" v-on:click="addToFavorites1">Add to favorites</button>
+          <br>
+          <br>
+          <li>
+            <ul>
+              <li class="bookInfo" v-bind:src="bookInfo">Book title is {{bookInfo_2.title}}</li>
+              <li class="bookInfo" v-bind:src="bookInfo">Book author is {{bookInfo_2.author}}</li>
+              <li class="bookInfo" v-bind:src="bookInfo">Book publish date is {{bookInfo_2.publishDate}}</li>
+              <!--<li v-bind:src="bookInfo">Book image is {{bookInfo.coverImg}}</li>-->
+            </ul>
+          </li>
+          <button id="addToFavoriteButton" v-on:click="addToFavorites2">Add to favorites</button>
+          <br>
+          <br>
+          <li>
+            <ul>
+              <li class="bookInfo" v-bind:src="bookInfo">Book title is {{bookInfo_3.title}}</li>
+              <li class="bookInfo" v-bind:src="bookInfo">Book author is {{bookInfo_3.author}}</li>
+              <li class="bookInfo" v-bind:src="bookInfo">Book publish date is {{bookInfo_3.publishDate}}</li>
+              <!--<li v-bind:src="bookInfo">Book image is {{bookInfo.coverImg}}</li>-->
+            </ul>
+          </li>
+          <button id="addToFavoriteButton" v-on:click="addToFavorites3">Add to favorites</button>
+          <br>
+          <br>
+          <li>
+            <ul>
+              <li class="bookInfo" v-bind:src="bookInfo">Book title is {{bookInfo_4.title}}</li>
+              <li class="bookInfo" v-bind:src="bookInfo">Book author is {{bookInfo_4.author}}</li>
+              <li class="bookInfo" v-bind:src="bookInfo">Book publish date is {{bookInfo_4.publishDate}}</li>
+              <!--<li v-bind:src="bookInfo">Book image is {{bookInfo.coverImg}}</li>-->
+            </ul>
+          </li>
+          <button id="addToFavoriteButton" v-on:click="addToFavorites4">Add to favorites</button>
+          <br>
+          <br>
+          <li>
+            <ul>
+              <li class="bookInfo" v-bind:src="bookInfo">Book title is {{bookInfo_5.title}}</li>
+              <li class="bookInfo" v-bind:src="bookInfo">Book author is {{bookInfo_5.author}}</li>
+              <li class="bookInfo" v-bind:src="bookInfo">Book publish date is {{bookInfo_5.publishDate}}</li>
+              <!--<li v-bind:src="bookInfo">Book image is {{bookInfo.coverImg}}</li>-->
+            </ul>
+          </li>
+          <button id="addToFavoriteButton" v-on:click="addToFavorites5">Add to favorites</button>
+          <br>
+          <br>
+          <li>
+            <ul>
+              <li class="bookInfo" v-bind:src="bookInfo">Book title is {{bookInfo_6.title}}</li>
+              <li class="bookInfo" v-bind:src="bookInfo">Book author is {{bookInfo_6.author}}</li>
+              <li class="bookInfo" v-bind:src="bookInfo">Book publish date is {{bookInfo_6.publishDate}}</li>
+              <!--<li v-bind:src="bookInfo">Book image is {{bookInfo.coverImg}}</li>-->
+            </ul>
+          </li>
+          <button id="addToFavoriteButton" v-on:click="addToFavorites6">Add to favorites</button>
+          <br>
+          <br>
+          <li>
+            <ul>
+              <li class="bookInfo" v-bind:src="bookInfo">Book title is {{bookInfo_7.title}}</li>
+              <li class="bookInfo" v-bind:src="bookInfo">Book author is {{bookInfo_7.author}}</li>
+              <li class="bookInfo" v-bind:src="bookInfo">Book publish date is {{bookInfo_7.publishDate}}</li>
+              <!--<li v-bind:src="bookInfo">Book image is {{bookInfo.coverImg}}</li>-->
+            </ul>
+          </li>
+          <button id="addToFavoriteButton" v-on:click="addToFavorites7">Add to favorites</button>
+          <br>
+          <br>
+          <li>
+            <ul>
+              <li class="bookInfo" v-bind:src="bookInfo">Book title is {{bookInfo_8.title}}</li>
+              <li class="bookInfo" v-bind:src="bookInfo">Book author is {{bookInfo_8.author}}</li>
+              <li class="bookInfo" v-bind:src="bookInfo">Book publish date is {{bookInfo_8.publishDate}}</li>
+              <!--<li v-bind:src="bookInfo">Book image is {{bookInfo.coverImg}}</li>-->
+            </ul>
+          </li>
+          <button id="addToFavoriteButton" v-on:click="addToFavorites8">Add to favorites</button>
+          <br>
+          <br>
+          <li>
+            <ul>
+              <li class="bookInfo" v-bind:src="bookInfo">Book title is {{bookInfo_9.title}}</li>
+              <li class="bookInfo" v-bind:src="bookInfo">Book author is {{bookInfo_9.author}}</li>
+              <li class="bookInfo" v-bind:src="bookInfo">Book publish date is {{bookInfo_9.publishDate}}</li>
+              <!--<li v-bind:src="bookInfo">Book image is {{bookInfo.coverImg}}</li>-->
+            </ul>
+          </li>
+          <button id="addToFavoriteButton" v-on:click="addToFavorites9">Add to favorites</button>
+          <br>
+        </ol>
+
       </div>
-      <br>
       <br>
       <h1> These are your favorite books </h1>
       <div v-if="favoriteBookSelected">
         <ol>
           <li v-for="favBook in favoriteBooks">
             <ul>
-              <li> Title: {{favBook.title}} </li>
-              <li> Author: {{favBook.author}} </li>
-              <li> Publish Date: {{favBook.publishDate}} </li>
+              <li class="favBookList"> Title: {{favBook.title}} </li>
+              <li class="favBookList"> Author: {{favBook.author}} </li>
+              <li class="favBookList"> Publish Date: {{favBook.publishDate}} </li>
           </li>
           <br>
         <ol>
